Fix: vertically align user avatar in notifications

--- a/src/modules/users/components/Inbox/InboxItem/InboxItem.css
+++ b/src/modules/users/components/Inbox/InboxItem/InboxItem.css
@@ -115,4 +115,5 @@
 .avatarWrapper {
   display: inline-block;
   margin-right: 10px;
+  vertical-align: 10%;
 }
